fixed hover on mobile

--- a/src/app/components/board/piece/piece.component.scss
+++ b/src/app/components/board/piece/piece.component.scss
@@ -79,3 +79,13 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .circle {
+    &:hover {
+      .overlay {
+        display: none;
+      }
+    }
+  }
+}
